# Decimal-to-Binary

./: CMakeLists.txt  LICENSE  README.md
include/: decimal_to_binary.h
src/: decimal_to_binary.cpp  main.cpp
tests/: test_decimal_to_binary.cpp
